--- a/hal_examples/simple_blinky_s3/Cargo.toml
+++ b/hal_examples/simple_blinky_s3/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-edition = "2021"
-name    = "feathers2-rs"
+edition = "2024"
+name    = "feathers3-simple-blinky"
 version = "0.1.0"
 
 [[bin]]
-name = "feathers2-rs"
+name = "feathers3-simple-blinky"
 path = "./src/bin/main.rs"
 
 [dependencies]
@@ -20,10 +20,10 @@ embedded-io-async = "0.6.1"
 esp-alloc = "0.7.0"
 esp-hal = { version = "1.0.0-beta.0", features = [
   "defmt",
-  "esp32s2",
+  "esp32s3",
   "unstable",
 ] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32s2"] }
+esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32s3"] }
 smoltcp = { version = "0.12.0", default-features = false, features = [
   "medium-ethernet",
   "multicast",
@@ -43,12 +43,12 @@ embassy-executor = { version = "0.7.0", features = [
   "task-arena-size-20480",
 ] }
 embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32s2"] }
+esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
 esp-wifi = { version = "0.13.0", features = [
   "builtin-scheduler",
   "defmt",
   "esp-alloc",
-  "esp32s2",
+  "esp32s3",
   "wifi",
 ] }
 heapless = { version = "0.8.0", default-features = false }
